deploy/k8s/canary/overlays/production/patch-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zigzag-backend-canary
spec:
  replicas: 2
