deploy/k8s/canary/overlays/production/patch-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alphashopper-web-canary
spec:
  replicas: 2
