deploy/k8s/canary/overlays/production/patch-frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alphashopper-web-canary
spec:
  rules:
    - host: shop.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: alphashopper-web-canary
                port:
                  number: 3000
